# c_lib_arithmetic

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  yaya_arithmetic.c  yaya_arithmetic.h
libs/: .gitignore  CMakeLists.txt  c_lib_testing
test/: CMakeLists.txt  main.c  test_arithmetic_base.c  test_arithmetic_base_conv.c  test_arithmetic_base_inverse.c  test_arithmetic_base_iter.c  test_arithmetic_base_math_chk.c  test_arithmetic_base_segment.c  test_arithmetic_base_unar.c  test_arithmetic_progresion.c
